--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -75,6 +75,8 @@ flutter:
   assets:
     - assets/images/
     - assets/fonts/
+    - assets/images/svg_images/
+    
 
   # An image asset can refer to one or more resolution-specific "variants", see
   # https://flutter.dev/to/resolution-aware-images
