--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -28,6 +28,7 @@ environment:
 # the latest version available on pub.dev. To see which dependencies have newer
 # versions available, run `flutter pub outdated`.
 dependencies:
+  
   cached_network_image: ^3.4.1
   cupertino_icons: ^1.0.8
   dartz: ^0.10.1
@@ -38,24 +39,21 @@ dependencies:
   flutter_localizations:
     sdk: flutter
   flutter_screenutil: ^5.9.3
+  
   flutter_svg: ^2.0.17
-  fluttertoast: ^8.2.12
+  fluttertoast: ^8.2.12s
   get_it: ^8.0.3
   go_router: ^14.8.1
   json_annotation: ^4.9.0
-  location: ^8.0.0
+  
+  location: ^8.0.0s
   shared_preferences: ^2.5.3
   shimmer: ^3.0.0
   url_launcher: ^6.3.1
-  country_code_picker: ^3.3.0
 
 dev_dependencies:
-
-  # The "flutter_lints" package below contains a set of recommended lints to
-  # encourage good coding practices. The lint set provided by the package is
-  # activated in the `analysis_options.yaml` file located at the root of your
-  # package. See that file for information about deactivating specific lint
-  # rules and activating additional ones.
+  json_serializable: ^6.9.4
+  build_runner: ^2.4.15
   flutter_lints: ^5.0.0
   flutter_test:
     sdk: flutter
