--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -48,6 +48,7 @@ dependencies:
   shimmer: ^3.0.0
   url_launcher: ^6.3.1
   country_code_picker: ^3.3.0
+  image_picker: ^1.1.2
 
 dev_dependencies:
 
