--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -30,6 +30,7 @@ environment:
 dependencies:
   
   cached_network_image: ^3.4.1
+  country_code_picker: ^3.3.0
   cupertino_icons: ^1.0.8
   dartz: ^0.10.1
   dio: ^5.8.0+1
@@ -41,12 +42,12 @@ dependencies:
   flutter_screenutil: ^5.9.3
   
   flutter_svg: ^2.0.17
-  fluttertoast: ^8.2.12s
+  fluttertoast: ^8.2.12
   get_it: ^8.0.3
   go_router: ^14.8.1
   json_annotation: ^4.9.0
   
-  location: ^8.0.0s
+  location: ^8.0.0
   shared_preferences: ^2.5.3
   shimmer: ^3.0.0
   url_launcher: ^6.3.1
