--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -41,16 +41,18 @@ dependencies:
   flutter_screenutil: ^5.9.3
   
   flutter_svg: ^2.0.17
-  fluttertoast: ^8.2.12s
+  fluttertoast: 
   get_it: ^8.0.3
   go_router: ^14.8.1
   json_annotation: ^4.9.0
   
-  location: ^8.0.0s
+  location: 
   shared_preferences: ^2.5.3
+  easy_localization: 
   shimmer: ^3.0.0
   url_launcher: ^6.3.1
-  country_code_picker: ^3.3.0
+  country_code_picker: 
+  image_picker: ^1.1.2
 
 dev_dependencies:
   json_serializable: ^6.9.4
@@ -73,6 +75,7 @@ flutter:
     - assets/images/
     - assets/fonts/
     - assets/images/svg_images/
+    - assets/lang/
     
 
   # An image asset can refer to one or more resolution-specific "variants", see
