--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -53,6 +53,8 @@ dependencies:
   url_launcher: ^6.3.1
   country_code_picker: 
   image_picker: ^1.1.2
+  geocoding: ^3.0.0
+  geolocator: ^14.0.0
 
 dev_dependencies:
   json_serializable: ^6.9.4
